login_routes_fixed

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,4 @@
-<form style="text-align: center" action="/authenticate" method="post">
+<form style="text-align: center" action="/login" method="post">
          <fieldset>
             <label for="email">Email:</label>
             <input type="email" id="email" name="username" placeholder="Enter your email" />
