--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+
+<head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+    <header class="header">
+       <h1 class="header-text">Ousted</h1>
+    </header>
+    <div class="main-content">
+        <!-- Page content -->
+        <p class="body-text">Tired of your favorite shows being spoiled by Facebook????</p>
+    </div>
+</body>
+<footer>
+        <!-- Footer content -->
+        <p class="copyright">Copyright 2015</p>
+    </footer>
 </html>
